--- a/Practical 8/KivyDemos-master/box_layout.kv
+++ b/Practical 8/KivyDemos-master/box_layout.kv
@@ -3,8 +3,9 @@ BoxLayout:
 #    orientation: 'horizontal'
     Button:
         text: 'Clear'
-    Button:
-        text: 'two'
+    TextInput:
+        id: input_name
+        text: ''
     Button:
         text: 'Greet'
         on_press: app.handle_greet()
@@ -13,3 +14,4 @@ BoxLayout:
     Label:
         text: 'Enter your name'
         color: (1, 1, 0, 1)
+        id: output_label
