--- a/Practical 8/KivyDemos-master/box_layout.kv
+++ b/Practical 8/KivyDemos-master/box_layout.kv
@@ -3,6 +3,7 @@ BoxLayout:
 #    orientation: 'horizontal'
     Button:
         text: 'Clear'
+        on_press: app.clear_input()
     TextInput:
         id: input_name
         text: ''
